Big refactoring, expect a lot of breaking changes
Major changes :

Added a familly of *Grammar classes :
- ReadOnlyGrammar is the base class. It has basic methods to retrieve expression
kind, parselets and toklets. As the name suggests, it cannot be modified with
regular uses. However, it can be modified by derived classes, like
- Grammar is a class derived from ReadOnlyGrammar. It exposes methods to
modify a Grammar by adding, for example, parselets, expression kinds, etc... It
is designed in a "fluent" way, allowing you to chain calls.
- LotusGrammar is the class that actually defines the Lotus syntax and grammar. It
derives from ReadOnlyGrammar but uses an internal Grammar object to register what
it needs. No more shady stuff in Utilities.cs, now there is a centralized place to
add new bits of syntax to the parser. Everything is in here, from the string(s)
associated to each ExpressionKind value, to the TriviaToklets the tokenizer uses.
However, since it is in fact a ReadOnlyGrammar, it doesn't expose anything to modify
its parselets, toklets, expression kinds, etc...

And with LotusGrammar comes two other similar classes : LotusTokenizer and LotusParser.
Their goal is to be able to work with a tokenizer and a parser made for lotus. As such,
you don't need to pass any grammar object to them, as they will automatically create a
new LotusGrammar. They were mainly created for convenience, organization, and
future-proofing

Therefore, tokenizers and parsers don't have to handle the definition of the grammar,
they can just use their own grammar object and query it when whenever needed.

The project now has Nullable Reference Types [1] enabled, and to this end, some classes
were annotated and/or modified to avoid problems detected by the compiler. There's still
some warnings, but I am either undecided on how I should handle them, or they just don't
make sense in their context (e.g. protected Parser() {...})

Made the parselets interfaces generic, allowing for more flex

--- a/parsex.csproj
+++ b/parsex.csproj
@@ -4,6 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3</TargetFramework>
     <RootNamespace>Parsex</RootNamespace>
+    <TargetCulture>InvariantCulture</TargetCulture>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
