Fixed a bug that would occur for VS 2019 (and below) users

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 # VS Code
 .vscode/
 
+# Visual studio
+.vs/
+
+# git folder
 .git/
 
+# Build artifact
 bin/
-
-*.old
 obj/
 
+# Misc
+*.old
 omnisharp.json
