--- a/parsex.csproj
+++ b/parsex.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Parsex</RootNamespace>
     <TargetCulture>InvariantCulture</TargetCulture>
     <Nullable>enable</Nullable>
+    <NoWarn>IDE0034</NoWarn>
   </PropertyGroup>
 
 </Project>
