Parsex now uses System.CommandLine for its CLI :)
Parsex is now an actual CLI instead of a fragile tape-based
hotchpotch of code. Almost all of the logic now resides in
Program.CLI.cs, including the actions of the different commands.
If you want some more detail, you can just type `dotnet run` and
it will print the (auto-generated) help text.

This migration has had multiple effects :
	- The `constant` subcommand has been replaced by
	  a `--const` option/switch

	- You can now specify the name of the file
	  you want to parse/process [1]. To make things even
	  easier, you can even give '-' as a file name and
	  then pass code through stdin

	- If you have dotnet-suggest installed and integrated
	  into your shell [2], you can now get auto-completion
	  with parsex !

[1] This was actually the main driver behind this change. Pulling
    in a dependency is not a decision I take lightly (as well as
    one I'm still debating regarding Spectre.Console and logging),
    but I feel like writing a parser solely for the CLI would have
    been a bad idea, and it's not exactly something I wan't to
    spend time and energy on. System.CommandLine is also up to date,
    official, and well written in general. Having a look through
    Program.CLI.cs makes it very clear what is going on, thanks to
    its rather declarative nature.

[2] https://github.com/dotnet/command-line-api/blob/main/docs/dotnet-suggest.md

--- a/parsex.csproj
+++ b/parsex.csproj
@@ -22,4 +22,8 @@
     <Using Remove="System.Threading.Tasks" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-*" />
+  </ItemGroup>
+
 </Project>
