--- a/parsex.csproj
+++ b/parsex.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="System.CommandLine" Version="2.0.0-*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Logging\Logger.cs.old" />
+  </ItemGroup>
+
 </Project>
