--- a/parsex.csproj
+++ b/parsex.csproj
@@ -8,6 +8,7 @@
     <TargetCulture>InvariantCulture</TargetCulture>
     <Nullable>enable</Nullable>
     <WarningAsError>IDE0059</WarningAsError>
+    <NoWarn>IDE0034,IDE0046,IDE0047,IDE0049,IDE0025,IDE0021,IDE1006,IDE0045,CA1050</NoWarn>
 
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
@@ -23,6 +24,7 @@
     <Using Remove="System.IO" />
     <Using Remove="System.Net.Http" />
     <Using Remove="System.Threading.Tasks" />
+    <Using Remove="System.Threading" />
   </ItemGroup>
 
   <ItemGroup>
