--- a/.editorconfig
+++ b/.editorconfig
@@ -32,7 +32,7 @@ dotnet_style_qualification_for_method = false:silent
 dotnet_style_qualification_for_property = false:silent
 
 # Language keywords vs BCL types preferences
-dotnet_style_predefined_type_for_locals_parameters_members = true:silent
+dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
 dotnet_style_predefined_type_for_member_access = false:suggestion
 
 # Parentheses preferences
@@ -42,7 +42,7 @@ dotnet_style_parentheses_in_other_operators = never_if_unnecessary:silent
 dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:suggestion
 
 # Modifier preferences
-dotnet_style_require_accessibility_modifiers = for_non_interface_members:silent
+dotnet_style_require_accessibility_modifiers = false #for_non_interface_members:silent
 
 # Expression-level preferences
 dotnet_style_coalesce_expression = true:warning
@@ -115,6 +115,7 @@ csharp_style_prefer_range_operator = true:suggestion
 csharp_style_throw_expression = true:suggestion
 csharp_style_unused_value_assignment_preference = discard_variable:suggestion
 csharp_style_unused_value_expression_statement_preference = discard_variable:silent
+dotnet_diagnostic.RCS1163.severity = none # RCS1163: Unused parameter
 
 # 'using' directive preferences
 csharp_using_directive_placement = outside_namespace:suggestion
