--- a/.editorconfig
+++ b/.editorconfig
@@ -20,6 +20,7 @@ charset = utf-8
 
 #### .NET Coding Conventions ####
 
+# Documentation preferences
 dotnet_diagnostic.RCS1228.severity = error # RCS1228: Unused element in documentation comment
 
 # Organize usings
@@ -69,6 +70,9 @@ dotnet_diagnostic.RCS1129.severity = none
 
 # Parameter preferences
 dotnet_code_quality_unused_parameters = all:suggestion
+
+# Constructor preferences
+dotnet_diagnostic.RCS1071.severity = none
 
 # Suppression preferences
 dotnet_remove_unnecessary_suppression_exclusions = none
