--- a/src/Lotus.CLI/lotus.cli.csproj
+++ b/src/Lotus.CLI/lotus.cli.csproj
@@ -4,12 +4,9 @@
     <OutputType>Exe</OutputType>
     <LangVersion>latest</LangVersion>
     <TargetFramework>net6</TargetFramework>
-    <RootNamespace>Lotus</RootNamespace>
+    <RootNamespace>Lotus.CLI</RootNamespace>
     <TargetCulture>InvariantCulture</TargetCulture>
     <Nullable>enable</Nullable>
-    <WarningAsError>IDE0059</WarningAsError>
-    <NoWarn>IDE0034,IDE0046,IDE0047,IDE0049,IDE0025,IDE0021,IDE1006,IDE0045,CA1050,RCS1110</NoWarn>
-
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
@@ -29,10 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.CommandLine" Version="2.0.0-*" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Logging\Logger.cs.old" />
+    <ProjectReference Include="../Lotus/lotus.csproj" />
   </ItemGroup>
 
 </Project>
