chore: move common utils out of Compiler/ into separate project

--- a/src/Common.props
+++ b/src/Common.props
@@ -23,4 +23,12 @@
   <ItemGroup>
     <PackageReference Include="Blokyk.Roslyn.ValueNotUsedSuppressor" Version="*" />
   </ItemGroup>
+
+  <Choose>
+    <When Condition="'$(MSBuildProjectName)' != 'Common'">
+      <ItemGroup>
+       <ProjectReference Include="../Common/Common.csproj" />
+      </ItemGroup>
+    </When>
+  </Choose>
 </Project>
