--- a/src/CLI/Lotus.CLI.csproj
+++ b/src/CLI/Lotus.CLI.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="System.CommandLine" Version="2.0.0-*" />
     <ProjectReference Include="../Compiler/Lotus.csproj" />
+    <ProjectReference Include="../Extras/Lotus.Extras.csproj" />
   </ItemGroup>
 
 </Project>
